# zoomer

./: Cargo.toml  flake.nix
nix/: default.nix  hm-module.nix  overlay.nix
src/: app.rs  config.rs  main.rs  shot.rs  utils.rs
