[package]
name = "zoomer"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.10"
merge2 = "0.3.0"
libwayshot = "0.3.0"
directories = "5.0.1"
mouse_position = "0.1.3"
serde = { version = "1.0.196", features = ["derive"] }
image = { version = "0.24.8", default-features = false, features = ["png"] }
softbuffer = { version = "0.4.1", default-features = false, features = [
    "wayland",
    "x11",
] }
winit = { version = "0.29.10", default-features = false, features = [
    "rwh_06",
    "wayland",
    "x11",
] }
clap = { version = "4.5.1", features = [
    "derive",
    "color",
    "suggestions",
    "wrap_help",
] }

[patch.crates-io]
mouse_position = { git = "https://github.com/SergioRibera/mouse_position", branch = "compositors_protocols" }
winit = { git = "https://github.com/SergioRibera/winit", branch = "wayland_position" }
