[package]
name = "zoomer"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland"]                     # BTW I use wayland
wayland = ["libwayshot", "winit/wayland"]
x11 = ["xcap", "winit/x11"]

[dependencies]
toml = "0.8.10"
merge2 = "0.3.0"
directories = "5.0.1"
xcap = { version = "0.0.4", optional = true }
libwayshot = { version = "0.3.0", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
image = { version = "0.24.8", default-features = false, features = ["png"] }
softbuffer = { version = "0.4.1", default-features = false, features = [
    "wayland",
    "x11",
] }
winit = { version = "0.30.5", git = "https://github.com/SergioRibera/winit", branch = "layer_shell", default-features = false }
clap = { version = "4.5.1", features = [
    "derive",
    "color",
    "suggestions",
    "wrap_help",
] }
smithay-client-toolkit = { version = "0.19.2", default-features = false }
